--- a/tetote-demo/sass/style.scss
+++ b/tetote-demo/sass/style.scss
@@ -671,7 +671,7 @@ section {
     @include mq($md){
         top: 609px;
         left: 12px;
-        width: rclamp(351, 650, 375, 768);
+        width: calc(100% - 24px);
         border: 0;
         box-shadow: 0 0 0 1px #222222;
     }
@@ -1027,6 +1027,9 @@ section {
 .member__slider-box{
     & .slick-list{
         padding-right: 150px;
+        @include mq($md){
+            padding-right: 24px; // モバイルでは控えめに
+        }
     }
 
     & .slick-slide{
